<resources>
    <string name="app_name">Newdo</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="article_image">article image</string>
    <string name="feeds">Feeds</string>
    <string name="mic">mic</string>
    <string name="searching">Search...</string>
    <string name="menu">Menu</string>
    <string name="back">back</string>
    <string name="no_internet">No Internet</string>
    <string name="try_again">Try Again</string>
    <string name="refresh">Refresh</string>
    <string name="copy_link">Copy Link</string>
    <string name="share">Share</string>
    <string name="open_with">Open with ...</string>
    <string name="settings">Settings</string>
    <string name="reels">Reels</string>
    <string name="coming_soon">Coming Soon...</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="notification">Notification</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="hide_story">Hide Story</string>
    <string name="download_link">Download Link</string>
    <string name="discover">Discover</string>
    <string name="empty">Empty</string>
    <string name="how_to_save">Tap ❤️ wherever you see it to save your favourite story</string>
    <string name="stories">Stories</string>
    <string name="close">Close</string>
    <string name="popular">Popular</string>
    <string name="trending">Trending 🔥</string>
</resources>