<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.ArticleFragment">


    <RelativeLayout
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_keyboard_backspace_24" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/articleImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:layout_toEndOf="@id/back" />

        <TextView
            android:id="@+id/author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="20dp"
            android:layout_toStartOf="@+id/saveArticleBtn"
            android:layout_toEndOf="@id/articleImage"
            android:fontFamily="sans-serif"
            android:maxLines="1"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/saveArticleBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="20dp"
            android:layout_toStartOf="@id/menuBtn"
            android:contentDescription="@string/menu"
            android:src="@drawable/save_icon_selector" />

        <ImageButton
            android:id="@+id/menuBtn"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="24dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:contentDescription="@string/menu"
            android:src="@drawable/ic_baseline_more_vert_24" />


    </RelativeLayout>

    <com.google.android.material.progressindicator.LinearProgressIndicator
        android:id="@+id/progressIndicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@+id/toolBar" />


    <WebView
        android:id="@+id/webView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressIndicator" />

    <LinearLayout
        android:id="@+id/noInternetFeedbackLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        android:background="@color/white"
        android:padding="10dp"
        app:layout_constraintTop_toTopOf="@id/webView"
        app:layout_constraintStart_toStartOf="@id/webView"
        app:layout_constraintEnd_toEndOf="@id/webView"
        app:layout_constraintBottom_toBottomOf="@id/webView">

        <TextView
            android:id="@+id/noInternetFeedbackDes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:text="@string/no_internet"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/noInternetFeedbackBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/disconnection"
            android:contentDescription="@string/refresh" />

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>